--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,5 +1,6 @@
 .cards{
 padding-top: 20px;
+padding-bottom: 36px;
 border-bottom: 1px solid rgba(33, 33, 33, 0.4);
 }
 
@@ -11,4 +12,14 @@ border-bottom: 1px solid rgba(33, 33, 33, 0.4);
   grid-template-columns: repeat(auto-fit, 413px);
   justify-content: center;
   gap: 40px 20px;
+}
+
+@media screen and (max-width: 627px) {
+  .cards{
+    padding-bottom: 20px;
+  }
+  .cards__list {
+    grid-template-columns: repeat(auto-fit, 288px);
+    gap: 20px;
+  }
 }
