--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -8,6 +8,8 @@
 .profile__avatar {
   margin-right: 20px;
   border-radius: 8px;
+  height: 190px;
+  width: 190px;
 }
 
 .profile__columm {
@@ -20,6 +22,12 @@
   font-size: 32px;
   font-weight: 500;
   line-height: 1;
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-width: 420px;
 }
 
 .profile__description {
@@ -27,6 +35,12 @@
   margin: 0;
   font-weight: 500;
   line-height: 1;
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-width: 420px;
 }
 
 .profile__edit-btn {
@@ -61,4 +75,44 @@
   width: 12px;
   height: 12px;
   margin-right: 8px;
+}
+
+@media screen and (max-width: 627px) {
+  .profile {
+    flex-direction: column;
+    max-width: 288px;
+    align-items: center;
+    text-align: center;
+    padding-top: 0;
+  }
+
+  .profile__avatar {
+    margin-right: 0;
+    padding-top: 20px;
+    margin-bottom: 12px;
+    height: 80px;
+    width: 80px;
+  }
+
+  .profile__name {
+    margin: 0 0 6px;
+    font-size: 20px;
+    max-width: 288px;
+  }
+
+  .profile__columm {
+    padding-bottom: 20px;
+    padding-top: 0;
+  }
+
+  .profile__edit-btn{
+    margin: 0 auto;
+    padding-top: 32px;
+  }
+
+  .profile__add-btn {
+    margin: 0 auto;
+    max-width: 288px;
+    width: 100%;
+  }
 }
